# seraphybr.github.io

./: .editorconfig  .gitignore  404.html  Cargo.toml  LICENSE  Makefile.toml  README.md  Trunk.toml  build.rs  index.html  package-lock.json  package.json  rust-toolchain.toml  shell.nix  tailwind.config.js  tailwind.utils.js
.github/workflows/: azure-static-web-apps-wonderful-ocean-0be106710.yml  gh-pages-deploy.yml
posts/: 2019-02-12-Motivacionais.md  2019-02-12-Primeiro-teste.md  2019-02-19-SonhosDoFuturoTec.md  2019-03-24-DotFiles.md  2019-03-24-Dotfiles.md
public/: highlight.css  tailwind.css
src/: lib.rs  main.rs  markdown_posts.rs
src/components/: back_to_top.rs  background.rs  button.rs  card.rs  content.rs  dark_mode.rs  dark_mode_toggle.rs  divider.rs  mod.rs  nav_menu.rs
src/contexts/: posts.rs
src/js/: highlight.js
src/models/: posts.rs
src/pages/: about.rs  base.rs  error.rs  home.rs  mod.rs  not_found.rs  posts.rs  projects.rs
