[package]
version = "0.1.0"
name = "seraphybr_blog"
repository = "https://github.com/SeraphyBR/seraphybr.github.io"
authors = ["SeraphyBR <luisjuniorbr@gmail.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[dependencies]
seed = "0.8.0"
