[package]
name = "seraphybr-page"
version = "0.1.0"
edition = "2024"
authors = ["SeraphyBR <luisjuniorbr@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.7.7", features = ["csr", "nightly"] }
leptos_meta = { version = "0.7.7", features = [] }
leptos_router = { version = "0.7.7", features = [] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
leptos-use = "0.15.6"
markdown = "1.0.0-alpha.16"
gray_matter = "0.2.6"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.37", features = ["serde"] }
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
